impr(styles): hide text in the navbar-brand

--- a/client/client/scripts/navigation/directives/cam-tasklist-navigation.less
+++ b/client/client/scripts/navigation/directives/cam-tasklist-navigation.less
@@ -6,11 +6,7 @@
     width: 220px;
     height: (@navbar-height - 2);
     background-image: url(../images/app-logo.png);
-  }
-
-  >.container .navbar-brand,
-  >.container-fluid .navbar-brand {
-    margin-left: -10px;
+    text-indent: -999em;
   }
 
 
