impr(footer): use the footer widget
related to CAM-3438

--- a/client/client/styles/_layout.less
+++ b/client/client/styles/_layout.less
@@ -191,8 +191,11 @@ footer.page {
 // S- (vertical layout)
 body {
   overflow: auto;
+  padding: 0;
+  margin: 0;
 }
 
+.site-wrap,
 .page-wrap,
 .columns,
 .column {
@@ -204,6 +207,10 @@ body {
   margin-left: 0;
   margin-right: 0;
   overflow: auto;
+}
+
+.page-wrap {
+  top: 41px;
 }
 
 .columns {
