--- a/client/client/styles/styles.less
+++ b/client/client/styles/styles.less
@@ -1,5 +1,6 @@
 // bootstrap variables
 @import "../../node_modules/camunda-commons-ui/node_modules/bootstrap/less/variables";
+
 @grid-gutter-width:                 30px;
 
 @brand-primary:                     #B5152B;
@@ -155,7 +156,7 @@
   @import "../../node_modules/camunda-commons-ui/node_modules/bootstrap/less/utilities";
   @import "../../node_modules/camunda-commons-ui/node_modules/bootstrap/less/responsive-utilities";
 
-
+@import "../../node_modules/camunda-commons-ui/resources/less/common";
 
 
 
