impr(HTML): remove data- prefix on angular directives

--- a/client/webapp/src/main/resources-plugin/base/app/views/dashboard/process-definitions.html
+++ b/client/webapp/src/main/resources-plugin/base/app/views/dashboard/process-definitions.html
@@ -17,7 +17,7 @@
         </thead>
 
         <tbody>
-          <tr data-ng-repeat="statistic in statistics | orderBy:orderByPredicate:orderByReverse">
+          <tr ng-repeat="statistic in statistics | orderBy:orderByPredicate:orderByReverse">
             <td class="state">
               <div state-circle
                    incidents="statistic.incidents"></div>
