fix(less variables): add brand-logo and header-height variables
related to CAM-3437

--- a/client/client/styles/styles.less
+++ b/client/client/styles/styles.less
@@ -1,5 +1,7 @@
 // bootstrap variables
 @import "../../node_modules/camunda-commons-ui/node_modules/bootstrap/less/variables";
+@brand-logo:                        '../images/app-logo.png';
+@header-height:                     @navbar-height + 1;
 
 @grid-gutter-width:                 30px;
 
