impr(styles): import widgets styles

--- a/client/client/styles/styles.less
+++ b/client/client/styles/styles.less
@@ -9,6 +9,11 @@
 @import "./../node_modules/camunda-commons-ui/resources/less/directives/pagination";
 @import "./../node_modules/camunda-commons-ui/resources/less/directives/cam-in-place-text-field";
 
+@import "./../node_modules/camunda-commons-ui/lib/widgets/inline-field/cam-widget-inline-field";
+@import "./../node_modules/camunda-commons-ui/lib/widgets/search-pill/search-pill";
+@import "./../node_modules/camunda-commons-ui/lib/widgets/search/cam-widget-search";
+@import "./../node_modules/camunda-commons-ui/lib/widgets/loader/cam-widget-loader";
+
 @import "_ctn";
 @import "_filters";
 
