--- a/client/webapp/src/main/resources-plugin/base/app/views/processDefinition/process-instance-table.html
+++ b/client/webapp/src/main/resources-plugin/base/app/views/processDefinition/process-instance-table.html
@@ -1,66 +1,57 @@
 <!-- # CE - camunda-bpm-webapp/webapp/src/main/resources-plugin/base/app/views/processDefinition/process-instance-table.html -->
-<table class="process-instances cam-table">
-  <thead>
-    <tr>
-      <th class="state">State</th>
-      <th class="instance-id uuid">ID</th>
-      <th class="start-time">Start Time</th>
-      <th class="business-key">Business Key</th>
-    </tr>
-  </thead>
-  <tbody>
-    <tr ng-repeat="processInstance in processInstances">
-      <td class="state">
-        <a state-circle
-           incidents="processInstance.incidents"
-           ng-href="#/process-instance/{{ processInstance.id }}?detailsTab=incidents-tab"></a>
-        <span class="badge badge-warning badge-suspended"
-              ng-show="processInstance.suspended"
-              tooltip="Currently suspended"
-              tooltip-placement="left">
-          <span class="glyphicon glyphicon-pause white"></span>
-        </span>
-      </td>
+<div cam-widget-loader
+     loading-state="{{ loadingState }}"
+     text-empty="No process instances matched by current filter.">
+  <table class="process-instances cam-table">
+    <thead>
+      <tr>
+        <th class="state">State</th>
+        <th class="instance-id uuid">ID</th>
+        <th class="start-time">Start Time</th>
+        <th class="business-key">Business Key</th>
+      </tr>
+    </thead>
+    <tbody>
+      <tr ng-repeat="processInstance in processInstances">
+        <td class="state">
+          <a state-circle
+             incidents="processInstance.incidents"
+             ng-href="#/process-instance/{{ processInstance.id }}?detailsTab=incidents-tab"></a>
+          <span class="badge badge-warning badge-suspended"
+                ng-show="processInstance.suspended"
+                tooltip="Currently suspended"
+                tooltip-placement="left">
+            <span class="glyphicon glyphicon-pause white"></span>
+          </span>
+        </td>
 
-      <td class="instance-id uuid">
-        <a href="#/process-instance/{{ processInstance.id }}" title="{{ processInstance.id }}">
-          {{ processInstance.id }}
-        </a>
-      </td>
+        <td class="instance-id uuid">
+          <a href="#/process-instance/{{ processInstance.id }}" title="{{ processInstance.id }}">
+            {{ processInstance.id }}
+          </a>
+        </td>
 
-      <td class="start-time">
-        {{ processInstance.startTime | camDate }}
-      </td>
+        <td class="start-time">
+          {{ processInstance.startTime | camDate }}
+        </td>
 
-      <td class="business-key">
-        {{ processInstance.businessKey }}
-      </td>
-    </tr>
+        <td class="business-key">
+          {{ processInstance.businessKey }}
+        </td>
+      </tr>
+    </tbody>
+  </table>
 
-    <tr ng-if="!processInstances">
-      <td colspan="4">
-        <span class="glyphicon glyphicon-loading"></span>
-        loading process instances...
-      </td>
-    </tr>
+  <pagination ng-if="pages.total > pages.size"
+              class="pagination-sm"
 
-    <tr ng-if="processInstances && !processInstances.length">
-      <td colspan="4">
-        No process instances matched by current filter.
-      </td>
-    </tr>
-  </tbody>
-</table>
+              page="pages.current"
+              ng-model="pages.current"
 
-<pagination ng-if="pages.total > pages.size"
-            class="pagination-sm"
+              total-items="pages.total"
+              items-per-page="pages.size"
 
-            page="pages.current"
-            ng-model="pages.current"
-
-            total-items="pages.total"
-            items-per-page="pages.size"
-
-            max-size="7"
-            boundary-links="true"></pagination>
+              max-size="7"
+              boundary-links="true"></pagination>
+</div>
 <!-- / CE - camunda-bpm-webapp/webapp/src/main/resources-plugin/base/app/views/processDefinition/process-instance-table.html -->
