--- a/client/webapp/src/main/resources-plugin/base/app/views/processInstance/incidents-tab.html
+++ b/client/webapp/src/main/resources-plugin/base/app/views/processInstance/incidents-tab.html
@@ -1,115 +1,106 @@
 <!-- # CE - camunda-bpm-webapp/webapp/src/main/resources-plugin/base/app/views/processInstance/incidents-tab.html -->
-<table class="incidents-tab cam-table">
-  <thead>
-    <tr>
-      <th class="message">Message</th>
-      <th class="timestamp">Timestamp</th>
-      <th class="activity">Activity</th>
-      <th class="cause instance-id uuid">Cause Process Instance Id</th>
-      <th class="cause-root instance-id uuid">Root Cause Process Instance Id</th>
-      <th class="type">Type</th>
-      <th class="action">Action</th>
-    </tr>
-  </thead>
+<div cam-widget-loader
+     loading-state="{{ loadingState }}"
+     text-empty="No incidents">
+  <table class="incidents-tab cam-table">
+    <thead>
+      <tr>
+        <th class="message">Message</th>
+        <th class="timestamp">Timestamp</th>
+        <th class="activity">Activity</th>
+        <th class="cause instance-id uuid">Cause Process Instance Id</th>
+        <th class="cause-root instance-id uuid">Root Cause Process Instance Id</th>
+        <th class="type">Type</th>
+        <th class="action">Action</th>
+      </tr>
+    </thead>
 
-  <tbody>
-    <tr ng-repeat="incident in incidents">
-      <td class="message">
-        <span ng-show="incident.incidentType === 'failedJob'">
-          <a href="{{ getJobStacktraceUrl(incident) }}"
-             target="_blank"
-             ng-show="incident.rootCauseIncidentMessage"
-             tooltip="Open stacktrace in new window"
-             tooltip-placement="top">
-            {{ incident.rootCauseIncidentMessage }}
-          </a>
-          <a href="{{ getJobStacktraceUrl(incident) }}"
-             target="_blank"
-             ng-hide="incident.rootCauseIncidentMessage"
-             tooltip="Open stacktrace in new window"
-             tooltip-placement="top">
-            <i>Message is null.</i>
-          </a>
-        </span>
+    <tbody>
+      <tr ng-repeat="incident in incidents">
+        <td class="message">
+          <span ng-show="incident.incidentType === 'failedJob'">
+            <a href="{{ getJobStacktraceUrl(incident) }}"
+               target="_blank"
+               ng-show="incident.rootCauseIncidentMessage"
+               tooltip="Open stacktrace in new window"
+               tooltip-placement="top">
+              {{ incident.rootCauseIncidentMessage }}
+            </a>
+            <a href="{{ getJobStacktraceUrl(incident) }}"
+               target="_blank"
+               ng-hide="incident.rootCauseIncidentMessage"
+               tooltip="Open stacktrace in new window"
+               tooltip-placement="top">
+              <i>Message is null.</i>
+            </a>
+          </span>
 
-        <span ng-hide="incident.incidentType === 'failedJob'">
-          <span ng-show="incident.rootCauseIncidentMessage">{{ incident.rootCauseIncidentMessage }}</span>
-          <span ng-hide="incident.rootCauseIncidentMessage"><i>Message is null.</i></span>
-        </span>
-      </td>
+          <span ng-hide="incident.incidentType === 'failedJob'">
+            <span ng-show="incident.rootCauseIncidentMessage">{{ incident.rootCauseIncidentMessage }}</span>
+            <span ng-hide="incident.rootCauseIncidentMessage"><i>Message is null.</i></span>
+          </span>
+        </td>
 
-      <td class="timestamp">
-        {{ incident.incidentTimestamp }}
-      </td>
+        <td class="timestamp">
+          {{ incident.incidentTimestamp }}
+        </td>
 
-      <td class="activity">
-        <span ng-show="incident.linkable">
-          <a cam-select-activity="incident.activityId"
-             ng-href="#/process-instance/{{ processInstance.id }}?activityIds={{ incident.activityId }}&amp;detailsTab=incidents-tab">
+        <td class="activity">
+          <span ng-show="incident.linkable">
+            <a cam-select-activity="incident.activityId"
+               ng-href="#/process-instance/{{ processInstance.id }}?activityIds={{ incident.activityId }}&amp;detailsTab=incidents-tab">
+              {{ incident.activityName }}
+            </a>
+          </span>
+          <span ng-hide="incident.linkable">
             {{ incident.activityName }}
+          </span>
+        </td>
+
+        <td class="cause instance-id uuid">
+          <span ng-show="incident.causeIncidentProcessInstanceId !== incident.processInstanceId" >
+            <a href="#/process-instance/{{incident.causeIncidentProcessInstanceId}}?activityIds={{ incident.causeIncidentActivityId }}&amp;detailsTab=incidents-tab">
+              {{ incident.causeIncidentProcessInstanceId }}
+            </a>
+          </span>
+        </td>
+
+        <td class="cause-root instance-id uuid">
+          <span ng-show="incident.rootCauseIncidentProcessInstanceId !== incident.processInstanceId" >
+            <a href="#/process-instance/{{incident.rootCauseIncidentProcessInstanceId}}?activityIds={{ incident.rootCauseIncidentActivityId }}&amp;detailsTab=incidents-tab">
+              {{ incident.rootCauseIncidentProcessInstanceId }}
+            </a>
+          </span>
+        </td>
+
+        <td class="type">
+          {{ getIncidentType(incident) }}
+        </td>
+
+        <td class="action">
+          <a class="btn btn-default action-button"
+             ng-click="openJobRetryDialog(incident)"
+             ng-show="incident.incidentType === 'failedJob' && incident.configuration"
+             tooltip="Increment Number of Retries of Failed Job"
+             tooltip-placement="left">
+            <span class="glyphicon glyphicon-repeat"></span>
           </a>
-        </span>
-        <span ng-hide="incident.linkable">
-          {{ incident.activityName }}
-        </span>
-      </td>
-
-      <td class="cause instance-id uuid">
-        <span ng-show="incident.causeIncidentProcessInstanceId !== incident.processInstanceId" >
-          <a href="#/process-instance/{{incident.causeIncidentProcessInstanceId}}?activityIds={{ incident.causeIncidentActivityId }}&amp;detailsTab=incidents-tab">
-            {{ incident.causeIncidentProcessInstanceId }}
-          </a>
-        </span>
-      </td>
-
-      <td class="cause-root instance-id uuid">
-        <span ng-show="incident.rootCauseIncidentProcessInstanceId !== incident.processInstanceId" >
-          <a href="#/process-instance/{{incident.rootCauseIncidentProcessInstanceId}}?activityIds={{ incident.rootCauseIncidentActivityId }}&amp;detailsTab=incidents-tab">
-            {{ incident.rootCauseIncidentProcessInstanceId }}
-          </a>
-        </span>
-      </td>
-
-      <td class="type">
-        {{ getIncidentType(incident) }}
-      </td>
-
-      <td class="action">
-        <a class="btn btn-default action-button"
-           ng-click="openJobRetryDialog(incident)"
-           ng-show="incident.incidentType === 'failedJob' && incident.configuration"
-           tooltip="Increment Number of Retries of Failed Job"
-           tooltip-placement="left">
-          <span class="glyphicon glyphicon-repeat"></span>
-        </a>
-      </td>
-    </tr>
-
-    <tr ng-if="!incidents">
-      <td colspan="7">
-        <span class="glyphicon glyphicon-loading"></span>
-        loading incidents...
-      </td>
-    </tr>
-
-    <tr ng-if="incidents && !incidents.length">
-      <td  colspan="7">
-        No incidents
-      </td>
-    </tr>
-  </tbody>
-</table>
+        </td>
+      </tr>
+    </tbody>
+  </table>
 
 
-<pagination ng-if="pages.total > pages.size"
-            class="pagination-sm"
+  <pagination ng-if="pages.total > pages.size"
+              class="pagination-sm"
 
-            page="pages.current"
-            ng-model="pages.current"
+              page="pages.current"
+              ng-model="pages.current"
 
-            total-items="pages.total"
-            items-per-page="pages.size"
+              total-items="pages.total"
+              items-per-page="pages.size"
 
-            max-size="7"
-            boundary-links="true"></pagination>
+              max-size="7"
+              boundary-links="true"></pagination>
+</div>
 <!-- / CE - camunda-bpm-webapp/webapp/src/main/resources-plugin/base/app/views/processInstance/incidents-tab.html -->
