--- a/client/webapp/src/main/resources-plugin/base/app/views/processInstance/job-retry-bulk-dialog.html
+++ b/client/webapp/src/main/resources-plugin/base/app/views/processInstance/job-retry-bulk-dialog.html
@@ -10,65 +10,54 @@
         ng-hide="status === 'finished' || status === 'performing'">
     <fieldset>
       <p>Select one of the following failed jobs to increment their number of retries:</p>
+      <div cam-widget-loader
+           loading-state="{{ loadingState }}"
+           text-empty="There are no failed jobs available to increment their retries.">
+        <table class="cam-table">
+          <thead>
+            <tr>
+              <th class="row-select">
+                <input type="checkbox"
+                       title="Select all"
+                       ng-model="allJobsSelected"
+                       ng-change="selectAllJobs(allJobsSelected)">
+              </th>
+              <th class="job-id uuid">ID</th>
+              <th class="scope">Scope</th>
+              <th class="exception">Exception</th>
+            </tr>
+          </thead>
 
-      <table class="cam-table">
-        <thead>
-          <tr>
-            <th class="row-select">
-              <input type="checkbox"
-                     title="Select all"
-                     ng-model="allJobsSelected"
-                     ng-change="selectAllJobs(allJobsSelected)">
-            </th>
-            <th class="job-id uuid">ID</th>
-            <th class="scope">Scope</th>
-            <th class="exception">Exception</th>
-          </tr>
-        </thead>
+          <tbody>
+            <tr ng-repeat="job in failedJobs">
+              <td class="row-select">
+                <input type="checkbox"
+                       ng-model="job.selected"
+                       ng-change="selectFailedJob(job)">
+              </td>
 
-        <tbody>
-          <tr ng-repeat="job in failedJobs">
-            <td class="row-select">
-              <input type="checkbox"
-                     ng-model="job.selected"
-                     ng-change="selectFailedJob(job)">
-            </td>
+              <td class="job-id uuid">{{ job.id }}</td>
 
-            <td class="job-id uuid">{{ job.id }}</td>
+              <td class="scope">{{ job.instance.name }}</td>
 
-            <td class="scope">{{ job.instance.name }}</td>
-
-            <td class="exception">{{ job.exceptionMessage }}</td>
-          </tr>
-
-          <tr ng-if="!failedJobs">
-            <td colspan="4">
-              <span class="glyphicon glyphicon-loading"></span>
-              loading failed jobs...
-            </td>
-          </tr>
-
-          <tr ng-if="failedJobs && !failedJobs.length">
-            <td  colspan="4">
-              There are no failed jobs available to increment their retries.
-            </td>
-          </tr>
-
-        </tbody>
-      </table>
+              <td class="exception">{{ job.exceptionMessage }}</td>
+            </tr>
+          </tbody>
+        </table>
 
 
-      <pagination ng-if="jobPages.total > jobPages.size"
-                  class="pagination-sm"
+        <pagination ng-if="jobPages.total > jobPages.size"
+                    class="pagination-sm"
 
-                  page="jobPages.current"
-                  ng-model="jobPages.current"
+                    page="jobPages.current"
+                    ng-model="jobPages.current"
 
-                  total-items="jobPages.total"
-                  items-per-page="jobPages.size"
+                    total-items="jobPages.total"
+                    items-per-page="jobPages.size"
 
-                  max-size="7"
-                  boundary-links="true"></pagination>
+                    max-size="7"
+                    boundary-links="true"></pagination>
+      </div>
     </fieldset>
   </form>
 
