fix(styles): add commons-ui widget styles

--- a/client/client/styles/styles.less
+++ b/client/client/styles/styles.less
@@ -159,6 +159,9 @@
   @import "../../node_modules/camunda-commons-ui/node_modules/bootstrap/less/responsive-utilities";
 
 @import "../../node_modules/camunda-commons-ui/resources/less/common";
+@import "../../node_modules/camunda-commons-ui/lib/widgets/inline-field/cam-widget-inline-field";
+@import "../../node_modules/camunda-commons-ui/lib/widgets/search/cam-widget-search";
+@import "../../node_modules/camunda-commons-ui/lib/widgets/search-pill/search-pill";
 
 
 
