--- a/client/client/scripts/tasklist/directives/cam-tasklist-tasks.less
+++ b/client/client/scripts/tasklist/directives/cam-tasklist-tasks.less
@@ -1,5 +1,99 @@
 @hover-color-bg: mix(@column-center-bg, @column-right-bg, 50%);
 
+section.tasks-list {
+  [cam-sorting-choices] {
+    > ol,
+    > div {
+      display: inline-block;
+    }
+  }
+
+  .sorting-label {
+    float: left;
+    vertical-align: middle;
+    padding: 1px 0;
+    line-height: 22px;
+    overflow: hidden;
+    white-space: nowrap;
+
+    max-width: 0;
+    margin-right: 0;
+    .transition(max-width 0.218s ease);
+    .transition(margin-right 0.218s ease);
+  }
+
+  .sorting-choice {
+    margin-right: (@grid-gutter-width / 2);
+  }
+
+  .new-sort .hidden-xs {
+    display: none;
+  }
+}
+
+
+// the following statments are aimed to control the space given for the sorting
+body {
+  .cell {
+    &.top {
+      .transition(height 0.218s ease);
+    }
+    &.content {
+      .transition(top 0.218s ease);
+    }
+  }
+
+  &.sort-choices-2 {
+    .cell.top {
+      height: ((@column-top-height * 2) + @grid-gutter-width);
+    }
+    .cell.content {
+      top: ((@column-top-height * 2) + @grid-gutter-width);
+    }
+  }
+  &.sort-choices-3 {
+    .cell.top {
+      height: ((@column-top-height * 3) + @grid-gutter-width);
+    }
+    .cell.content {
+      top: ((@column-top-height * 3) + @grid-gutter-width);
+    }
+  }
+  &.sort-choices-4,
+  &.sort-choices-5,
+  &.sort-choices-6,
+  &.sort-choices-7 {
+    .cell.top {
+      height: ((@column-top-height * 4) + @grid-gutter-width);
+    }
+    .cell.content {
+      top: ((@column-top-height * 4) + @grid-gutter-width);
+    }
+  }
+
+
+  &.list-column-close,
+  &.task-column-close {
+    .cell.top {
+      height: (@column-top-height + @grid-gutter-width);
+    }
+    .cell.content {
+      top: (@column-top-height + @grid-gutter-width);
+    }
+  }
+
+  &.task-column-close {
+    .sorting-label {
+      max-width: 100%;
+      margin-right: (@grid-gutter-width / 2);
+    }
+
+    .new-sort .hidden-xs {
+      display: inline;
+    }
+  }
+}
+
 [cam-tasks] {
   // NOTE: the .shutter is defined in the variables
   ol.tasks-list {
@@ -123,6 +217,7 @@
     }
   }
 }
+
 
 @media (min-width: @screen-md-min) {
   ol.tasks-list {
