fix(sorting): add sorting on created by default

--- a/client/client/scripts/tasklist/directives/cam-tasklist-tasks.less
+++ b/client/client/scripts/tasklist/directives/cam-tasklist-tasks.less
@@ -15,6 +15,7 @@ section.tasks-list {
     line-height: 22px;
     overflow: hidden;
     white-space: nowrap;
+    display: inline-block;
 
     max-width: 0;
     margin-right: 0;
