impr(sorting): work on layout of sorting criteria
Related to CAM-3466

--- a/client/client/styles/_layout.less
+++ b/client/client/styles/_layout.less
@@ -404,9 +404,11 @@ button.reset-regions {
     > .cell.top {
       > div {
         width: 100%;
-        margin-left: -34px;
-        margin-right: -34px;
-        padding: 0 34px;
+        // margin-left: -20px;
+        margin-left: 0;
+        margin-right: -20px;
+        // padding: 0 20px;
+        padding: 0 20px 0 0;
       }
     }
 
