--- a/client/client/styles/styles.less
+++ b/client/client/styles/styles.less
@@ -294,6 +294,7 @@ a:focus {
 
 
 @import "../scripts/tasklist/directives/cam-tasklist-search.less";
+@import "../scripts/tasklist/directives/cam-tasklist-sorting.less";
 @import "../scripts/tasklist/directives/cam-tasklist-tasks.less";
 
 
