chore(bpmn diagrams): use bpmn viewer widget
related to CAM-3435

--- a/client/client/styles/directives/process-diagram.less
+++ b/client/client/styles/directives/process-diagram.less
@@ -53,6 +53,16 @@
     max-width: 300px;
   }
 
+  .bpmn-overlay {
+    position: absolute;
+    pointer-events:none;
+    filter:Alpha(opacity=0);
+
+    > [view] {
+      pointer-events:all;
+    }
+  }
+
   .badge {
     font-size: 12px;
     border-width: 1px;
