--- a/client/client/scripts/tasklist/directives/cam-tasklist-sorting.less
+++ b/client/client/scripts/tasklist/directives/cam-tasklist-sorting.less
@@ -22,9 +22,9 @@ section.tasks-list {
   }
 
   ol.sorting-choice {
-    // margin-right: (@grid-gutter-width / 2);
     max-width: 100%;
     width: 100%;
+    margin: 0;
     float: left;
   }
   li.sorting-choice {
@@ -64,14 +64,7 @@ section.tasks-list {
     float: left;
   }
 
-  // static positioning is needed because otherwise the .dropdown-menu get cropped
-  // by the parent element having overflow: hidden
   .new-sort {
-    // position: static;
-    // > .dropdown-menu {
-    //   top: auto;
-    // }
-
     .hidden-xs {
       display: none;
     }
@@ -88,9 +81,8 @@ section.tasks-list {
 }
 
 
-// the following statments are aimed to control the space given for the sorting
-body {
-  .cell {
+section.column {
+  > .cell {
     &.top {
       .transition(height 0.218s ease);
     }
@@ -98,55 +90,4 @@ body {
       .transition(top 0.218s ease);
     }
   }
-
-  &.sort-choices-2 {
-    .cell.top {
-      height: ((@column-top-height * 2) + @grid-gutter-width);
-    }
-    .cell.content {
-      top: ((@column-top-height * 2) + @grid-gutter-width);
-    }
-  }
-  &.sort-choices-3 {
-    .cell.top {
-      height: ((@column-top-height * 3) + @grid-gutter-width);
-    }
-    .cell.content {
-      top: ((@column-top-height * 3) + @grid-gutter-width);
-    }
-  }
-  &.sort-choices-4,
-  &.sort-choices-5,
-  &.sort-choices-6,
-  &.sort-choices-7 {
-    .cell.top {
-      height: ((@column-top-height * 4) + @grid-gutter-width);
-    }
-    .cell.content {
-      top: ((@column-top-height * 4) + @grid-gutter-width);
-    }
-  }
-
-
-  &.list-column-close,
-  &.task-column-close {
-    .cell.top {
-      height: (@column-top-height + @grid-gutter-width);
-    }
-    .cell.content {
-      top: (@column-top-height + @grid-gutter-width);
-    }
-  }
-
-  &.task-column-close {
-    .sorting-label {
-      max-width: 100%;
-      margin-right: (@grid-gutter-width / 2);
-    }
-
-    .new-sort .hidden-xs {
-      display: inline;
-    }
-  }
 }
-
