fix(sorting): correct sorting height after login
Related to CAM-3567

--- a/client/client/styles/_layout.less
+++ b/client/client/styles/_layout.less
@@ -224,7 +224,7 @@ body {
 
 .cell {
   &.top {
-    height: (@column-top-height + @grid-gutter-width);
+    min-height: (@column-top-height + @grid-gutter-width);
     padding: (@grid-gutter-width / 2);
     margin: (0 - (@grid-gutter-width * 0.5))
             (0 - (@grid-gutter-width * 0.5))
