impr(task form): add some space between form and buttons
This commit also adds some styles to correct nesting in some forms.

Related to CAM-3573

--- a/client/client/scripts/task/directives/cam-tasklist-task.less
+++ b/client/client/scripts/task/directives/cam-tasklist-task.less
@@ -17,4 +17,19 @@
   .nav-tabs .glyphicon {
     margin-left: 5px;
   }
+
+  .form-container {
+    // aimed to correct the with of forms for which the nesting of elements
+    // was not done correctly (form > .row > .form-group)
+    form.form > .form-group {
+      margin-left: 0;
+      margin-right: 0;
+    }
+  }
+}
+
+[cam-tasklist-form] {
+  .form-actions {
+    margin-top: (@grid-gutter-width / 2);
+  }
 }
