--- a/client/webapp/src/main/resources-plugin/base/app/views/processDefinition/activity-instance-statistics-overlay.html
+++ b/client/webapp/src/main/resources-plugin/base/app/views/processDefinition/activity-instance-statistics-overlay.html
@@ -1,6 +1,7 @@
 <!-- # CE - camunda-bpm-webapp/webapp/src/main/resources-plugin/base/app/views/processDefinition/activity-instance-statistics-overlay.html -->
 <span class="activity-bottom-left-position"
-      ng-show="activityInstance">
+      ng-show="activityInstance"
+      ng-click="selectRunningInstances($event)">
   <span class="badge"
         tooltip="Running Activity Instances"
         tooltip-placement="top"
