--- a/client/webapp/src/main/resources-plugin/jobDefinition/app/views/processDefinition/job-definition-suspension-overlay.html
+++ b/client/webapp/src/main/resources-plugin/jobDefinition/app/views/processDefinition/job-definition-suspension-overlay.html
@@ -3,6 +3,6 @@
       tooltip="Suspended Job Definition"
       tooltip-placement="top"
       ng-show="jobDefinition && jobDefinition.suspended">
-  <span class="glyphicon glyphicon-play"></span>
+  <span class="glyphicon glyphicon-pause"></span>
 </span>
 <!-- / CE - camunda-bpm-webapp/webapp/src/main/resources-plugin/jobDefinition/app/views/processDefinition/job-definition-suspension-overlay.html -->
