--- a/client/client/styles/_filters.less
+++ b/client/client/styles/_filters.less
@@ -65,7 +65,6 @@
   input[type=text] {
     margin: 0 0 5px 0;
     width: 100%;
-    height: 26px;
   }
 
   .search-date {
@@ -77,9 +76,8 @@
 
   .removable-input {
     display: inline-block;
-    width: 185px;
-    padding-right: 30px;
     position: relative;
+    width: 100%;
   }
 
   .removable-input button {
@@ -104,7 +102,7 @@
 
   .search .remove {
     position: absolute;
-    height: 26px;
+    margin-top: 8px;
     right: 0;
     opacity: 0.1;
   }
@@ -115,7 +113,7 @@
   }
 
   .search.search-date .remove-date-filter {
-    height: 26px;
+    margin-top: 6px;
     display: inline-block;
     float: none;
     opacity: 0.1;
