--- a/client/webapp/src/main/resources-plugin/base/app/views/processDefinition/activity-instance-statistics-overlay.html
+++ b/client/webapp/src/main/resources-plugin/base/app/views/processDefinition/activity-instance-statistics-overlay.html
@@ -5,6 +5,7 @@
   <span class="badge"
         tooltip="Running Activity Instances"
         tooltip-placement="top"
+        tooltip-animation="false"
         ng-show="activityInstance.instances">
     {{ activityInstance.instances | abbreviateNumber }}
   </span>
@@ -12,6 +13,7 @@
   <span class="badge badge-important"
         tooltip="Open Incidents"
         tooltip-placement="top"
+        tooltip-animation="false"
         ng-show="activityInstance.incidents">!</span>
 </span>
 <!-- / CE - camunda-bpm-webapp/webapp/src/main/resources-plugin/base/app/views/processDefinition/activity-instance-statistics-overlay.html -->
