--- a/client/webapp/src/main/resources-plugin/base/app/views/processInstance/activity-instance-statistics-overlay.html
+++ b/client/webapp/src/main/resources-plugin/base/app/views/processInstance/activity-instance-statistics-overlay.html
@@ -5,6 +5,7 @@
   <span class="badge"
         tooltip="Running Activity Instances"
         tooltip-placement="top"
+        tooltip-animation="false"
         ng-show="activityInstanceStatistics.instances && activityInstanceStatistics.instances.length">
     {{ activityInstanceStatistics.instances.length | abbreviateNumber }}
   </span>
@@ -12,6 +13,7 @@
   <span class="badge badge-important"
         tooltip="Open Incidents"
         tooltip-placement="top"
+        tooltip-animation="false"
         ng-show="activityInstanceStatistics.incidents && activityInstanceStatistics.incidents.length">!</span>
 </span>
 <!-- / CE - camunda-bpm-webapp/webapp/src/main/resources-plugin/base/app/views/processInstance/activity-instance-statistics-overlay.html -->
