chore(diagrams): allow selection of all flow nodes in instance view
related to CAM-3657

--- a/client/client/styles/styles.less
+++ b/client/client/styles/styles.less
@@ -19,6 +19,8 @@
 
 
 @import "pages/dashboard";
+@import "pages/process-definition";
+@import "pages/process-instance";
 
 @import "directives/process-diagram";
 @import "directives/process-diagram-preview";
