chore(diagram): remove select all from instance diagram
related to CAM-3657, CAM-3668

--- a/client/client/styles/pages/process-instance.less
+++ b/client/client/styles/pages/process-instance.less
@@ -58,6 +58,12 @@
     &.startBefore .modification {
       border-color: @modification-start-before-color;
     }
+    &.newOperation {
+      margin-top: 20px;
+      .modification {
+        border-color: @gray;
+      }
+    }
 
     .variables {
       margin-top: 5px;
