chore(widgets): deprecate cockpit variable directive & use widget

--- a/client/client/styles/styles.less
+++ b/client/client/styles/styles.less
@@ -13,6 +13,7 @@
 @import "./../node_modules/camunda-commons-ui/lib/widgets/search-pill/search-pill";
 @import "./../node_modules/camunda-commons-ui/lib/widgets/search/cam-widget-search";
 @import "./../node_modules/camunda-commons-ui/lib/widgets/loader/cam-widget-loader";
+@import "./../node_modules/camunda-commons-ui/lib/widgets/variable/cam-widget-variable";
 
 @import "_ctn";
 @import "_filters";
