--- a/client/client/styles/pages/process-instance.less
+++ b/client/client/styles/pages/process-instance.less
@@ -2,6 +2,22 @@
 @modification-cancel-some-color:  @canceled-color;
 @modification-start-before-color: lighten(@link-color, 5%);
 @modification-start-after-color:  darken(@link-color, 5%);
+
+.ctn-content-bottom > div:first-child {
+  position: absolute;
+  height: 100%;
+  left: 0;
+  right: 0;
+
+  .ctn-tabbed-content {
+    position: absolute;
+    top: 62px; //
+    bottom: 0;
+    left: 0;
+    right: 0;
+  }
+}
+
 .process-instance-modification {
   .instances-counter {
     text-align: right;
@@ -64,7 +80,8 @@
     min-height: 34px;
     font-weight: bolder;
     input,
-    select {
+    select,
+    .dropdown {
       font-weight: normal;
     }
   }
