feat(bpmn icon): add bpmn symbol icon in activity tree
Related to CAM-3675

--- a/client/client/styles/directives/activity-instance-tree.less
+++ b/client/client/styles/directives/activity-instance-tree.less
@@ -17,6 +17,10 @@
   * {
     display: block;
   }
+  [class^="icon-"],
+  [class*=" icon-"] {
+    display: inline;
+  }
 
   a {
     cursor: pointer;
