impr(cockpit): improve design for testability
add editing class to process instance view variable table

--- a/client/webapp/src/main/resources-plugin/base/app/views/processInstance/variable-instances-tab.html
+++ b/client/webapp/src/main/resources-plugin/base/app/views/processInstance/variable-instances-tab.html
@@ -16,7 +16,7 @@
       <tr ng-repeat="variable in variables"
           data-variable-name="{{ variable.name }}"
           data-variable-type="{{ variable.value.type }}"
-          ng-class="'variable-type-' + variable.value.type">
+          ng-class="'variable-type-' + variable.value.type + (variable.inEditMode ? ' editing' : '')">
         <td class="variable-name">
           {{ variable.name }}
         </td>
