--- a/client/client/styles/_vars.less
+++ b/client/client/styles/_vars.less
@@ -14,3 +14,8 @@
 @state-circle-size: 16px;
 
 @brand-logo:  '../assets/images/app-logo.png';
+
+
+@filters-color: #f5d99c;
+@filters-bg: lighten(@filters-color, 15%);
+
