impr(modification): add style for instruction highlighting
related to CAM-3679

--- a/client/client/styles/directives/process-diagram.less
+++ b/client/client/styles/directives/process-diagram.less
@@ -33,6 +33,12 @@
     top: -0.85em;
   }
 
+  .activity-top-left-position {
+    position: absolute;
+    top: -0.85em;
+    left: -0.9em;
+  }
+
   .activity-bottom-right-position {
     bottom: -0.65em;
   }
