impr(styles): use padding on the tree-node-label span

--- a/client/client/styles/directives/activity-instance-tree.less
+++ b/client/client/styles/directives/activity-instance-tree.less
@@ -147,7 +147,8 @@
         display: block;
       }
       a {
-        right: 40px;
+        right: 20px;
+        padding-right: 24px;
       }
     }
   }
