chore(modification): styling of select ancestor uses dropdown
related to CAM-3681

--- a/client/client/styles/pages/process-instance.less
+++ b/client/client/styles/pages/process-instance.less
@@ -121,13 +121,9 @@
   }
 
 
-  [typeahead-popup] {
-    max-width: 100%;
-    left: 0;
-    right: 0;
-
+  .ancestor-dropwdown {
     li > a > div {
-      &[bind-html-unsafe] {
+      &.name {
         font-weight: bolder;
       }
       overflow: hidden;
