fix(process instance): handle multi-instance bodies
related to CAM-3772

--- a/client/client/styles/pages/process-instance.less
+++ b/client/client/styles/pages/process-instance.less
@@ -45,6 +45,7 @@
       border-left: (@grid-gutter-width / 2) solid;
       .transition(border-color 0.218s ease-in-out);
       border-top: 1px solid @gray-lighter;
+      min-height: 80px;
 
       &.highlight {
         background-color: @modification-highlight-color;
