impr(instance modification): work on styling
Related to CAM-3680

--- a/client/client/styles/pages/process-instance.less
+++ b/client/client/styles/pages/process-instance.less
@@ -32,13 +32,19 @@
     }
 
     .meta,
+    .sorting-arrows,
     .modification {
       padding-top: 5px;
       padding-bottom: 5px;
     }
 
-    .meta {
+    .meta,
+    .sorting-arrows {
+      text-align: right;
       line-height: 34px;
+      .btn-hidden {
+        visibility: hidden;
+      }
     }
 
     .modification {
