--- a/client/client/styles/directives/activity-instance-tree.less
+++ b/client/client/styles/directives/activity-instance-tree.less
@@ -134,11 +134,14 @@
     }
 
     &.selected {
-      background: lighten(@link-hover-color, 65%);
+      background-color: @bpmn-highlight-bg;
+      border-color: @bpmn-highlight-border-color;
+      z-index: 11;
       [class^="icon-"],
       [class*=" icon-"] {
         &:before {
-          background: lighten(@link-hover-color, 65%);
+          background-color: @bpmn-highlight-bg;
+          border-color: @bpmn-highlight-border-color;
         }
       }
 
@@ -157,13 +160,12 @@
     padding: 4px;
     border-radius: 0 @border-radius-base @border-radius-base 0;
     background-color: @canceled-color;
-    border: 1px solid darken(@gray-lighter, 15%);
     border-left: 0;
     position: absolute;
-    top: 0;
-    bottom: 0;
-    right: 0;
-    z-index: 2;
+    top: 1px;
+    bottom: 1px;
+    right: 1px;
+    z-index: 12;
 
 
     &.activity-instance-completed {
