fix(styles): include commons-ui variables

--- a/client/client/styles/styles.less
+++ b/client/client/styles/styles.less
@@ -1,4 +1,5 @@
 // bootstrap variables
+@import "../../node_modules/camunda-commons-ui/resources/less/common-variables";
 @import "../../node_modules/camunda-commons-ui/node_modules/bootstrap/less/variables";
 @brand-logo:                        '../images/app-logo.png';
 @header-height:                     @navbar-height + 1;
