feat(plugins): add plugin point for task list
refactor(search): move tasklist search to plugin

related to CAM-3409

--- a/client/client/styles/_layout.less
+++ b/client/client/styles/_layout.less
@@ -412,7 +412,7 @@ button.reset-regions {
       }
     }
 
-    [cam-task-search] {
+    [cam-widget-search] {
       position: relative;
       z-index: 5;
       padding-bottom: (@grid-gutter-width / 2);
