--- a/client/client/styles/styles.less
+++ b/client/client/styles/styles.less
@@ -6,3 +6,9 @@
 @import "./../node_modules/camunda-commons-ui/lib/widgets/loader/cam-widget-loader";
 
 @import "pages/authorizations";
+
+
+.page-header{
+  margin-left: @grid-gutter-width / 2;
+  margin-right: @grid-gutter-width / 2;
+}
