--- a/client/client/styles/_vars.less
+++ b/client/client/styles/_vars.less
@@ -16,6 +16,5 @@
 @brand-logo:  '../assets/images/app-logo.png';
 
 
-@filters-color: #f5d99c;
-@filters-bg: lighten(@filters-color, 15%);
-
+@filters-bg: #f5f5f5;
+@filters-color: darken(@filters-bg, 15%);
