fix(textarea): textarea fits to dialog size
related to CAM-3887

--- a/client/webapp/src/main/resources-plugin/base/app/views/processInstance/variable-instance-inspect-dialog.html
+++ b/client/webapp/src/main/resources-plugin/base/app/views/processInstance/variable-instance-inspect-dialog.html
@@ -40,7 +40,7 @@
                   ng-model="currentValue"
                   ng-keyup="typeIn(this, 'serialized')"
                   rows="10"
-                  class="input-xxlarge">
+                  class="form-control">
         </textarea>
       </div>
 
@@ -56,7 +56,7 @@
                     ng-model="currentValueDeserialized"
                     ng-keyup="typeIn(this, 'deserialized')"
                     rows="10"
-                    class="input-xxlarge form-control">
+                    class="form-control">
           </textarea>
         </div>
       </div>
