fix(style): add style for badge dragging
related to CAM-3780

--- a/client/client/styles/directives/process-diagram.less
+++ b/client/client/styles/directives/process-diagram.less
@@ -114,5 +114,12 @@
       border-color: @canceled-darker;
       color: @canceled-darker;
     }
+
+    &.drag {
+      position: absolute;
+      boxShadow: 2px 2px 1px #333333;
+      left: 0;
+      top: -20px;
+    }
   }
 }
