impr(procInst modification): work on styling
Related to CAM-3863

--- a/client/client/styles/directives/process-diagram.less
+++ b/client/client/styles/directives/process-diagram.less
@@ -116,10 +116,9 @@
     }
 
     &.drag {
+      opacity: 0.5;
       position: absolute;
-      boxShadow: 2px 2px 1px #333333;
-      left: 0;
-      top: -20px;
+      .box-shadow(0 0 3px @gray);
     }
   }
 }
