impr(search): style the dropdown results
Related to CAM-3895

--- a/client/client/scripts/tasklist/plugins/cam-tasklist-search-plugin.less
+++ b/client/client/scripts/tasklist/plugins/cam-tasklist-search-plugin.less
@@ -59,6 +59,15 @@
     }
   }
 
+  [cam-widget-inline-field] .dropdown-menu li {
+    max-width: 100%;
+    > a {
+      text-overflow: ellipsis;
+      overflow: hidden;
+      white-space: normal;
+    }
+  }
+
   .search-dropdown {
     left: -1px;
     margin-top: 0;
